Update on Overleaf.

--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -2,19 +2,19 @@
 
 \old{TODO}
 
-This report presents the EMEP activities in 2019 and 2020 in relation to transboundary
+This report presents the EMEP activities in 2020 and 2021 in relation to transboundary
 fluxes of particulate matter, photo-oxidants, acidifying and
 eutrophying components, with focus on results
-for 2018. It presents major results of the activities related to
+for 2019. It presents major results of the activities related to
 emission inventories, observations and modelling. The report also
 introduces specific relevant research activities addressing EMEP key
 challenges, as well as technical developments of the observation and
 modelling capacities.
 
-\subsubsection*{Measurements and model results for 2018}
+\subsubsection*{Measurements and model results for 2019} %Wenche, Svetlana, Sverre, Hilde to write
 In the first chapter, the status of air pollution in 2018 is presented, combining 
 meteorological information and emissions with numerical simulations using the EMEP MSC-W model together with observed air concentration and deposition data.
-
+%Wenche rewrite:
 Altogether 35 Parties reported measurement data for 2018, from 170 sites in total. 
 Of these, 120 sites reported measurements of inorganic ions in precipitation and/or 
 main components in air; 70 of these sites had co-located measurements in both air and 
@@ -23,7 +23,7 @@ precipitation. The ozone network consisted of 141 sites, particulate matter was 
 In addition, 56 sites from 21 Parties reported at least one of the components required in the advanced EMEP measurement program (level 2). However, very few sites provided a complete level 2 program, i.e. only 12 sites have implemented all the required aerosol parameters. 
 
 The mean daily max O$_3$, SOMO35 and AOT40 all show a distinct gradient with levels increasing from north to south, a well established feature for ozone reflecting the dependency of ozone on the photochemical conditions. The geographical pattern in the measured values is fairly well reflected by the model results for all these three metrics.
-
+%Svetlana & Wenche update:
 PM pollution was rather moderate in 2018, in particular in Central, Western and Southern Europe (10-30\% lower compared to the 18-year average) due to the relatively mild winter and more precipitation. Only in Turkey, the Caucasus region, Ukraine, the Baltic countries and southern parts of Finland and Sweden, \PM[10] and \PM[2.5] levels were higher. 
 EMEP MSC-W model calculations and EMEP observations show a general increase of annual mean \PM[10] and \PM[2.5] over land from north to south, with concentrations being below 2-5 \ug in Northern
 Europe and increasing to 5-15 \ug in the mid-latitudes and further south.
@@ -49,14 +49,21 @@ whereas
 %they were more frequent 
 during the summer at the Mediterranean sites. Remarkably, the largest number of \PM[2.5] exceedances at three out of four German sites occurred in spring, while much fewer occurred during the cold seasons.
 
-\subsubsection*{The summer of 2018}
-During April/May-August parts of Europe experienced a persistent heat wave. Northern Europe and in particular the Nordic countries and the UK were most heavily affected, but also central parts of the continent experienced long-lasting heat and drought in summer. The heat and drought affected the atmospheric level of pollutants in many ways. Tropospheric ozone is strongly tied to the meteorological conditions, and hot, sunny and dry weather conditions can lead to increased ozone levels in many ways. 
 
-The continent experienced a series of ozone episodes during April/May-August. The most pronounced lasted from the last part of July to the first days of August when areas from Southern Italy to Scandinavia were affected and peak values exceeding 100 ppb were seen at several sites. Another marked ozone episode was seen one month earlier, from the end of June to the first week of July, mainly affecting Central Europe.
 
-Long-term time series of EMEP ozone measurements show a downward trend in the metrics SOMO35 and AOT40 reflecting the reduced emission of precursors, whereas the levels in 2018 were clearly elevated. This is a clear message that an efficient abatement of surface ozone depends on future climate change as well as on the reduction of \nox and VOCs emissions. The high levels of AOT40 in 2018 should, however, not be used directly to assess ozone effects on vegetation. The extreme drought likely reduced the uptake of ozone in the plants, leading to increased near-surface ozone.
+%Something about ozone, Sverre
 
-\PM[10] and \PM[2.5] levels in Northern Europe were generally increased all of summer 2018. The increase was mainly attributed to fine (\PM[2.5]) OC (organic carbon) and mineral dust, which formation and emission were governed by the favourable meteorological conditions. Some sites experienced a substantial 250-400 \% increase in the mineral dust loading compared to the  2013-2017 period, with source regions both within and outside of Europe. Isoprene levels were elevated compared to previous years, as were 2-methyltetrols, which are oxidation products of isoprene partitioning to the particulate phase. Unchanged EC levels and reduced BB (biomass burning) and PBAP (primary biological aerosol particles) tracer levels point to BSOA (biogenic secondary organic aerosol) formation as the explanation of the increased level of fine OM in summer 2018.
+%Something about wet dep, Hilde
+
+
+%\subsubsection*{The summer of 2018}
+%During April/May-August parts of Europe experienced a persistent heat wave. Northern Europe and in particular the Nordic countries and the UK were most heavily affected, but also central parts of the continent experienced long-lasting heat and drought in summer. The heat and drought affected the atmospheric level of pollutants in many ways. Tropospheric ozone is strongly tied to the meteorological conditions, and hot, sunny and dry weather conditions can lead to increased ozone levels in many ways. 
+
+%The continent experienced a series of ozone episodes during April/May-August. The most pronounced lasted from the last part of July to the first days of August when areas from Southern Italy to Scandinavia were affected and peak values exceeding 100 ppb were seen at several sites. Another marked ozone episode was seen one month earlier, from the end of June to the first week of July, mainly affecting Central Europe.
+
+%Long-term time series of EMEP ozone measurements show a downward trend in the metrics SOMO35 and AOT40 reflecting the reduced emission of precursors, whereas the levels in 2018 were clearly elevated. This is a clear message that an efficient abatement of surface ozone depends on future climate change as well as on the reduction of \nox and VOCs emissions. The high levels of AOT40 in 2018 should, however, not be used directly to assess ozone effects on vegetation. The extreme drought likely reduced the uptake of ozone in the plants, leading to increased near-surface ozone.
+
+%\PM[10] and \PM[2.5] levels in Northern Europe were generally increased all of summer 2018. The increase was mainly attributed to fine (\PM[2.5]) OC (organic carbon) and mineral dust, which formation and emission were governed by the favourable meteorological conditions. Some sites experienced a substantial 250-400 \% increase in the mineral dust loading compared to the  2013-2017 period, with source regions both within and outside of Europe. Isoprene levels were elevated compared to previous years, as were 2-methyltetrols, which are oxidation products of isoprene partitioning to the particulate phase. Unchanged EC levels and reduced BB (biomass burning) and PBAP (primary biological aerosol particles) tracer levels point to BSOA (biogenic secondary organic aerosol) formation as the explanation of the increased level of fine OM in summer 2018.
 
 
 
@@ -66,7 +73,7 @@ In 2021, 48 out of 51 Parties (94$\%$) submitted emission inventories to the EME
 Estimates of PM emissions as currently provided by Parties have a number of major uncertainties, and there is a clear need for clarification and standardisation of the methods used to define and report PM emissions. 
 Previous work has clearly shown that the definitions behind national emission estimates are inconsistent in their treatment of condensable organics: some countries explicitly do not include condensables in their PM inventories, some likely include condensables and for some it is mixed or unclear.
 
-Parties were asked to include a table with information on the condensable component in their reporting of PM emissions. This year, 23 Parties provided such information. 
+%Parties were asked to include a table with information on the condensable component in their reporting of PM emissions. This year, 23 Parties provided such information. 
 The treatment of condensable organics in emission factors is best known for the emissions from the energy sector and road transport, while it is less clear for small-scale combustion, which is one of the sources where the largest impact on the emission factor occur.
 
 In March 2020, MSC-W hosted an expert workshop on condensables, which brought together experts in emissions, measurements, inventories, and policy from Europe and North America, and created a much better understanding of the issues and
@@ -82,70 +89,71 @@ After the first round of submissions in 2017, 2021 was the second year for which
 
 Emissions from international shipping in different European seas were estimated based on the CAMS global shipping emission dataset for the year 2019.
 
+\subsubsection*{Trends in air pollution}
+Short summary of the chapter
+
+%\subsubsection*{Condensable organics: model evaluation and source receptor matrices for 2018}
+%Estimates of PM emissions as currently provided by Parties have a number of major uncertainties, and there is a clear need for clarification and standardisation of the methods used to define and report PM emissions. 
+%Previous work has clearly shown that the definitions behind national emission estimates are inconsistent in their treatment of condensable organics: some countries explicitly do not include condensables in their PM inventories, some likely include condensables and for some it is mixed or unclear. 
+%In 2019 and 2020, Parties were asked to include a table with information on the condensable component in their reporting of PM emissions. This year, 21 Parties provided such information. 
+%The treatment of condensable organics in emission factors is best known for the emissions from the energy sector and road transport, while it is less clear for small-scale combustion, which is one of the sources where the largest impact on the emission factor occur.
+
+%In March 2020, MSC-W hosted an expert workshop on condensables (funded
+%by the Nordic Council of Ministers (NMR)), which brought together experts
+%in emissions, measurements, inventories, and policy from Europe and
+%North America, and created a much better understanding of the issues and
+%possible approaches for dealing with this important class of compounds.
+%Discussions at the NMR workshop confirmed that even when countries did include condensables, there were significant differences in the methodologies used. Furthermore, the workshop agreed that as a first step the TNO Ref2 emissions
+%for GNFR\footnote{Gridded Nomenclature For Reporting, an aggregated version of NFR (Nomenclature For Reporting) sectors used by the Parties in reporting to the LRTAP Convention} sector C (where condensables are added to small-combustion
+%emissions in a harmonised way) is a good
+%first no-regret step for describing condensable emissions in atmospheric
+%dispersion modelling. The EMEP Bureaux decided that EMEP MSC-W should make use of the Ref2 emissions for condensable organics in order to produce more consistent model results.
+
+%Therefore, the assessment of the air quality situation in Europe and source receptor calculations for 2018 made this year, have been conducted with official EMEP emissions combined with TNO Ref2 emissions for the GNFR sector C for PM (EMEPwRef2C). These model results, and in addition model results using officially reported PM emissions, have been compared to EMEP and EEA observations - showing improved performance for \PM[2.5], especially in wintertime, in the case where condensables are consistently included. 
+
+%The improvement was seen for most countries, although as expected, the extent of the change depends on the country and location (and the methods used to define PM emissions in nearby countries). 
+%Although there is good evidence for the basic concepts which are applied here, many of the assumptions are very uncertain, even by the standards of organic aerosol modelling in general.
+
+%For some countries (e.g. Norway, Bulgaria, Italy), the EMEPwRef2C and EMEP estimates of \PM[2.5] emissions
+%are comparable, but for others (e.g. Austria, Estonia, France, Germany, the Netherlands and Switzerland) the EMEPwRef2C estimate is far higher than the reported
+%emissions. For a few countries EMEPwRef2C is lower (e.g. Croatia, Hungary). In order to estimate the impact of such differences on source-receptor matrices we
+%have calculated the changes in country-to-itself and import-to-country for \PM[2.5] for all the Parties, using the two different emission estimates. 
+%The changes in \PM[2.5] and especially \ppmfine were quite sensitive
+%to the different emission setups, with differences in country-to-itself contributions up to a factor 5 for \ppmfine, and up to a factor 2 for \PM[2.5], but varying greatly from country to country.
+
+%It is clear that the current situation, in which some countries include and others exclude condensables, is 
+%very problematic, and leads to inconsistent and unfair source-receptor matrices. 
+%Recent activities to better document and understand the current situation 
+%have led to a greater understanding of the issues among different expert communities. One of
+%the main conclusions of the NMR workshop is that although these initial calculations with the EMEPwRef2C data are a good first step towards a harmonised emission methodology, 
+%these expert estimates should be increasingly replaced by national estimates once procedures for dealing with condensables in a more harmonised way are agreed on and implemented. Such improvements will need detailed discussion among the emission inventory communities (e.g. TFEIP, TFTEI, national experts) as well as with modellers who will have to account for the complex volatility issues surrounding the condensables and associated issues.
+
+%\subsubsection*{Elemental carbon: model evaluation and source receptor matrices for 2018}
+%It is well known that current reporting of black carbon (BC) to CLRTAP suffer from a number of critical deficiencies, and that the uncertainties in estimated BC emissions are large.
+%In this report, we present model calculations for 2018 using both the reported EMEP BC emissions (assuming that the reported BC is elemental carbon (EC) for all countries) and an EC emission inventory which is partly derived from the TNO Ref2 bottom-up estimate (corresponding to EMEPwRef2C discussed in the previous section).
+%The EMEP MSC-W model results were compared with EMEP observations of EC. Annual mean EC in \PM[2.5] is underestimated by 26\% in
+%the model run based on officially reported emissions, whereas it is overestimated by 24\% in the model run using EMEPwRef2C (with corresponding biases for the winter of -31\% and +33\%).
+%From the model evaluation presented here it is not possible to judge which of the emission data sets is the most `correct' one, but the results are very different for many countries.
+
+%Source-receptor calculations have been performed for both emission scenarios.
+%We demonstrate that the differences in the emission estimates of EC lead to up to a factor of 2-4 differences in country-to-itself and import-to-country contributions to EC concentrations.
+
+%\subsubsection*{The EMEP Intensive Measurement Period (IMP) 2017/18: Equivalent Black Carbon (EBC) from fossil fuel and biomass burning sources}
+%We present an overview of data from the EMEP IMP 2017/18 and source apportionment (fossil fuel and wood burning equivalent black carbon, \EBCff and \EBCbb, respectively), using positive matrix factorization (PMF). The advantage of the PMF approach to EBC source apportionment is that an a priori knowledge of the aerosol {\AA}ngstr{\"o}m exponent (AAE) is not required (rather, AAEs are an output derived from factor profiles). PMF consistently produced 2 factors with profiles of \AAEff and \AAEbb. Time series of the PMF factors exhibit clear diurnal patterns for the urban sites, with \AAEff showing a morning and an evening peak, while \AAEbb mainly peaks in the evening. For the background sites there is typically a low diurnal variation as they are likely more affected by long-range transported (LRT) emissions than local emissions. The \EBCbb contribution at sites that are mostly influenced by LRT (34 $\pm$ 10\%) was marginally lower than at sites dominated by local emissions (39 $\pm$ 8\%) and shows that biomass burning contributes significantly to background EBC, i.e. \EBCbb air pollution is a regional as well as a local problem. We also provide an overview of the data that are available to the community on request.
 
 
-\subsubsection*{Condensable organics: model evaluation and source receptor matrices for 2018}
-Estimates of PM emissions as currently provided by Parties have a number of major uncertainties, and there is a clear need for clarification and standardisation of the methods used to define and report PM emissions. 
-Previous work has clearly shown that the definitions behind national emission estimates are inconsistent in their treatment of condensable organics: some countries explicitly do not include condensables in their PM inventories, some likely include condensables and for some it is mixed or unclear. 
-In 2019 and 2020, Parties were asked to include a table with information on the condensable component in their reporting of PM emissions. This year, 21 Parties provided such information. 
-The treatment of condensable organics in emission factors is best known for the emissions from the energy sector and road transport, while it is less clear for small-scale combustion, which is one of the sources where the largest impact on the emission factor occur.
-
-In March 2020, MSC-W hosted an expert workshop on condensables (funded
-by the Nordic Council of Ministers (NMR)), which brought together experts
-in emissions, measurements, inventories, and policy from Europe and
-North America, and created a much better understanding of the issues and
-possible approaches for dealing with this important class of compounds.
-Discussions at the NMR workshop confirmed that even when countries did include condensables, there were significant differences in the methodologies used. Furthermore, the workshop agreed that as a first step the TNO Ref2 emissions
-for GNFR\footnote{Gridded Nomenclature For Reporting, an aggregated version of NFR (Nomenclature For Reporting) sectors used by the Parties in reporting to the LRTAP Convention} sector C (where condensables are added to small-combustion
-emissions in a harmonised way) is a good
-first no-regret step for describing condensable emissions in atmospheric
-dispersion modelling. The EMEP Bureaux decided that EMEP MSC-W should make use of the Ref2 emissions for condensable organics in order to produce more consistent model results.
-
-Therefore, the assessment of the air quality situation in Europe and source receptor calculations for 2018 made this year, have been conducted with official EMEP emissions combined with TNO Ref2 emissions for the GNFR sector C for PM (EMEPwRef2C). These model results, and in addition model results using officially reported PM emissions, have been compared to EMEP and EEA observations - showing improved performance for \PM[2.5], especially in wintertime, in the case where condensables are consistently included. 
-
-The improvement was seen for most countries, although as expected, the extent of the change depends on the country and location (and the methods used to define PM emissions in nearby countries). 
-Although there is good evidence for the basic concepts which are applied here, many of the assumptions are very uncertain, even by the standards of organic aerosol modelling in general.
-
-For some countries (e.g. Norway, Bulgaria, Italy), the EMEPwRef2C and EMEP estimates of \PM[2.5] emissions
-are comparable, but for others (e.g. Austria, Estonia, France, Germany, the Netherlands and Switzerland) the EMEPwRef2C estimate is far higher than the reported
-emissions. For a few countries EMEPwRef2C is lower (e.g. Croatia, Hungary). In order to estimate the impact of such differences on source-receptor matrices we
-have calculated the changes in country-to-itself and import-to-country for \PM[2.5] for all the Parties, using the two different emission estimates. 
-The changes in \PM[2.5] and especially \ppmfine were quite sensitive
-to the different emission setups, with differences in country-to-itself contributions up to a factor 5 for \ppmfine, and up to a factor 2 for \PM[2.5], but varying greatly from country to country.
-
-It is clear that the current situation, in which some countries include and others exclude condensables, is 
-very problematic, and leads to inconsistent and unfair source-receptor matrices. 
-Recent activities to better document and understand the current situation 
-have led to a greater understanding of the issues among different expert communities. One of
-the main conclusions of the NMR workshop is that although these initial calculations with the EMEPwRef2C data are a good first step towards a harmonised emission methodology, 
-these expert estimates should be increasingly replaced by national estimates once procedures for dealing with condensables in a more harmonised way are agreed on and implemented. Such improvements will need detailed discussion among the emission inventory communities (e.g. TFEIP, TFTEI, national experts) as well as with modellers who will have to account for the complex volatility issues surrounding the condensables and associated issues.
-
-\subsubsection*{Elemental carbon: model evaluation and source receptor matrices for 2018}
-It is well known that current reporting of black carbon (BC) to CLRTAP suffer from a number of critical deficiencies, and that the uncertainties in estimated BC emissions are large.
-In this report, we present model calculations for 2018 using both the reported EMEP BC emissions (assuming that the reported BC is elemental carbon (EC) for all countries) and an EC emission inventory which is partly derived from the TNO Ref2 bottom-up estimate (corresponding to EMEPwRef2C discussed in the previous section).
-The EMEP MSC-W model results were compared with EMEP observations of EC. Annual mean EC in \PM[2.5] is underestimated by 26\% in
-the model run based on officially reported emissions, whereas it is overestimated by 24\% in the model run using EMEPwRef2C (with corresponding biases for the winter of -31\% and +33\%).
-From the model evaluation presented here it is not possible to judge which of the emission data sets is the most `correct' one, but the results are very different for many countries.
-
-Source-receptor calculations have been performed for both emission scenarios.
-We demonstrate that the differences in the emission estimates of EC lead to up to a factor of 2-4 differences in country-to-itself and import-to-country contributions to EC concentrations.
-
-\subsubsection*{The EMEP Intensive Measurement Period (IMP) 2017/18: Equivalent Black Carbon (EBC) from fossil fuel and biomass burning sources}
-We present an overview of data from the EMEP IMP 2017/18 and source apportionment (fossil fuel and wood burning equivalent black carbon, \EBCff and \EBCbb, respectively), using positive matrix factorization (PMF). The advantage of the PMF approach to EBC source apportionment is that an a priori knowledge of the aerosol {\AA}ngstr{\"o}m exponent (AAE) is not required (rather, AAEs are an output derived from factor profiles). PMF consistently produced 2 factors with profiles of \AAEff and \AAEbb. Time series of the PMF factors exhibit clear diurnal patterns for the urban sites, with \AAEff showing a morning and an evening peak, while \AAEbb mainly peaks in the evening. For the background sites there is typically a low diurnal variation as they are likely more affected by long-range transported (LRT) emissions than local emissions. The \EBCbb contribution at sites that are mostly influenced by LRT (34 $\pm$ 10\%) was marginally lower than at sites dominated by local emissions (39 $\pm$ 8\%) and shows that biomass burning contributes significantly to background EBC, i.e. \EBCbb air pollution is a regional as well as a local problem. We also provide an overview of the data that are available to the community on request.
+%\subsubsection*{Downscaling of PM and \noii in Europe using uEMEP}
+%Over the past four years EMEP MSC-W has been developing and implementing a downscaling methodology to enhance the capabilities of the EMEP MSC-W chemical transport model in Europe. This downscaling model is known as uEMEP (urban EMEP) and can achieve high resolution air quality modelling down to 100 m for entire countries. It is here applied to calculate annual mean NO$_{2}$, PM$_{2.5}$ and PM$_{10}$ concentrations for all of Europe at 100 m resolution and is validated against all available EEA monitoring stations in Europe (including traffic stations) at 25 m resolution. The downscaling shows significant improvement in NO$_{2}$ concentrations where spatial correlation has been doubled for most countries and bias reduced from -46\% to -17\% for all stations in Europe. The downscaling of PM$_{2.5}$ and PM$_{10}$ does not show improvement in spatial correlation but does reduce the overall bias in the European calculations from -28\% to -17\% and -43\% to -30\% for PM$_{2.5}$ and PM$_{10}$ respectively. Sensitivity tests in Norway show that improvements in the emission and emission proxy data used for the downscaling can significantly improve the PM results but more effort is required to improve PM downscaling across Europe. The downscaling development opens the way for improved exposure estimates, improved assessment of emissions as well as detailed calculations of source contributions to exceedances in a consistent way for all of Europe at high resolution.
 
 
-\subsubsection*{Downscaling of PM and \noii in Europe using uEMEP}
-Over the past four years EMEP MSC-W has been developing and implementing a downscaling methodology to enhance the capabilities of the EMEP MSC-W chemical transport model in Europe. This downscaling model is known as uEMEP (urban EMEP) and can achieve high resolution air quality modelling down to 100 m for entire countries. It is here applied to calculate annual mean NO$_{2}$, PM$_{2.5}$ and PM$_{10}$ concentrations for all of Europe at 100 m resolution and is validated against all available EEA monitoring stations in Europe (including traffic stations) at 25 m resolution. The downscaling shows significant improvement in NO$_{2}$ concentrations where spatial correlation has been doubled for most countries and bias reduced from -46\% to -17\% for all stations in Europe. The downscaling of PM$_{2.5}$ and PM$_{10}$ does not show improvement in spatial correlation but does reduce the overall bias in the European calculations from -28\% to -17\% and -43\% to -30\% for PM$_{2.5}$ and PM$_{10}$ respectively. Sensitivity tests in Norway show that improvements in the emission and emission proxy data used for the downscaling can significantly improve the PM results but more effort is required to improve PM downscaling across Europe. The downscaling development opens the way for improved exposure estimates, improved assessment of emissions as well as detailed calculations of source contributions to exceedances in a consistent way for all of Europe at high resolution.
+%\subsubsection*{Reduced nitrogen in Europe}  
+%EMEP-MSC-W model calculations for the years 2005, 2017 and 2030 have been performed, assuming official EMEP emissions for 2005 and 2017 and NEC Directive obligations for 2030.
+%Emissions of ammonia have decreased from 2005 to 2017, 
+%and further reductions are projected for 2030. However, these reductions are much smaller than the corresponding reductions in \sox and \nox 
+%emissions. EMEP MSC-W model calculations predict that these differences in emission reductions lead to an increasingly smaller fraction of ammonia being converted to ammonium, likely impacting the ability of controlling \PM[2.5] by additional reductions of ammonia 
+%emissions on top of NEC2030. 
 
-
-\subsubsection*{Reduced nitrogen in Europe}  
-EMEP-MSC-W model calculations for the years 2005, 2017 and 2030 have been performed, assuming official EMEP emissions for 2005 and 2017 and NEC Directive obligations for 2030.
-Emissions of ammonia have decreased from 2005 to 2017, 
-and further reductions are projected for 2030. However, these reductions are much smaller than the corresponding reductions in \sox and \nox 
-emissions. EMEP MSC-W model calculations predict that these differences in emission reductions lead to an increasingly smaller fraction of ammonia being converted to ammonium, likely impacting the ability of controlling \PM[2.5] by additional reductions of ammonia 
-emissions on top of NEC2030. 
-
-Following the emission reductions, depositions of reduced nitrogen are decreasing in Europe. As the reductions in \nox emission are larger than for ammonia, the fraction of reduced versus total deposition of nitrogen is increasing and is projected to reach more than 70\% in large parts of Europe by year 2030. Further reductions in ammonia emissions would thus efficiently reduce the deposition of reduced and also total nitrogen in the future.
+%Following the emission reductions, depositions of reduced nitrogen are decreasing in Europe. As the reductions in \nox emission are larger than for ammonia, the fraction of reduced versus total deposition of nitrogen is increasing and is projected to reach more than 70\% in large parts of Europe by year 2030. Further reductions in ammonia emissions would thus efficiently reduce the deposition of reduced and also total nitrogen in the future.
 
 %The effects of ammonia emissions on \chem{PM_{2.5}} 
 %concentrations and the deposition of oxidised 
@@ -169,20 +177,16 @@ Following the emission reductions, depositions of reduced nitrogen are decreasin
 
 
 %Technical EMEP Developments
-\subsubsection*{Model improvements} %DS
+\subsubsection*{Model improvements} %DS updated 23/7/2021
 
-The EMEP MSC-W model code has been upgraded in a number of ways.
-The Local Fractions method, which allows to track a large number of
-primary emission sources efficiently, has been generalized and can
-be used to track emissions from a list of countries. The chemical
-mechanisms have been updated, and the chemical pre-processing system
-and associated box-model  (GenChem, boxChem) have been released as
-open-source.  New default and country-specific emission speciations
-for NMVOC and \pmfine have been implemented, making use of new and more
-detailed emissions information from the TNO CAMS inventories.
+The EMEP MSC-W model code has been upgraded in a number of ways. 
+A 19-sector emissions system (GNFR-CAMS) was introduced into the code. Emissions for soil NO, DMS, and aircraft were updated using results from the CAMS81 project. 
+The  fine/coarse fractions for sea-salt and nitrate were modified. Emissions and the chemical mechanism were adapted to explicitly track GNFR sector C emissions (residential). Revised global monthly emission factors were produced, and use of a global time-zone map introduced. The default Kz  and Hmix schemes were changed. The local fraction methods were extended, and code for the many configuration options was simplified. 
 
 
-\subsubsection*{Development in the monitoring programme}
+
+
+\subsubsection*{Development in the monitoring programme} %Wenche/NILU to update
 The two last chapters of the report present the implementation of the EMEP monitoring strategy and general development in the monitoring programme including data submission. There are large differences between Parties in the level of implementation, as well as significant changes in the national activities during the period 2000-2018. With respect to the requirement for level 1 monitoring, 40\% of the Parties have had an improvement since 2010, while 33\% have reduced the level of monitoring. For level 2 monitoring there has been a general positive development in recent years. However, only few sites have a complete measurement program.
 
 The complexity of data reporting has increased in recent years, and it is therefore now mandatory for the data providers to use the submission and validation tool when submitting data to EMEP to improve the quality and timeliness in the data flow. 
