--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -118,10 +118,13 @@ runs. The horizontal resolution is \resZO, with 20 vertical layers
 
 The ozone observed at a surface station is the net result of various physio-chemical processes: surface dry deposition and uptake in vegetation, titration by nearby \nox emissions, regional photochemical ozone formation and atmospheric transport of background ozone levels, each of which may have seasonal and diurnal systematic variations. Episodes with elevated levels of ozone are observed during the summer half year when certain meteorological situations (dry, sunny, cyclonic stable weather) promote the formation of ozone over the European continent. 
 
-Due to the special meteorological conditions in 2018 with a remarkably hot and dry summer in large areas, most pronounced in northern parts of Europe, the ozone levels in 2018 are discussed in more detail at the separate Chapter~\ref{ch:Summer2018} dealing with the prolonged heat wave.
+There were four main ozone episodes in Europe in 2019 that occurred around days 23-28 in each of the month April, June, July and August and at a varying degree in different parts of the continent. Extreme levels of ozone even exceeding EU's alert threshold of 240 \ug were observed in several countries as explained in more detail below.
 
-Figure~\ref{fig:indicators_emep} shows various modelled ozone metrics for 2018 with the corresponding measured metrics based on the EMEP measurement sites plotted on top of the maps. Figure~\ref{fig:indicators_airbase} shows similar plots with measurement data from EEA's air quality database (e-Reporting), but stations classified as urban or traffic sites were not used. Note that most of the EMEP sites are also included in e-Reporting and thus included in Figure~\ref{fig:indicators_airbase} as well. Only stations located below 500 metres above sea level were used in this comparison to avoid uncertainties related to the extraction of model data in regions with complex topography. Figure
-~\ref{fig:indicatorPOD} shows only modelled POD$_1$ since measurements could not be calculated from the ozone monitoring data directly and could not be included.
+The April episode was linked to a blocking high pressure located over western parts of Russia and Belarus, setting up southeasterly winds bringing warm and dry continental, polluted air masses northwards particularly to the Baltic countries, Scandinavia and parts of the UK. Northern Norway registered the second highest surface ozone level (82 ppb) since the start of the monitoring in 1990. Likely, agricultural fires in East Europe (Ukraine and Russia) contributed to the peak ozone levels.
+
+June 2019 was the warmest June on record, globally as well as for Europe (\citep{Bissolli:2020}). During 26-28 June a persistent high pressure over central Europe brought very hot air masses into central and western parts of the continent. In Germany temperatures just below 40 C
+
+Figure~\ref{fig:indicators_emep} shows various modelled ozone metrics for 2019 with the corresponding measured metrics based on the EMEP measurement sites plotted on top of the maps. Only stations located below 500 metres above sea level were used in this comparison to avoid uncertainties related to the extraction of model data in regions with complex topography. Figure ~\ref{fig:indicators_emep} shows a) maxO3 (= mean of the daily max ozone concentration) for the 6-month period April-September, b) SOMO35 (= Sum of Ozone Means Over 35 ppb), c) AOT40 for forests (= Accumulated Ozone exposure over a Threshold of 40 ppb) for the 6-month period April-September using the hours between 08 and 20, and Figure~\ref{fig:indicatorPOD} shows POD$_1$ for forests (= Phytotoxic Ozone Dose above a threshold 1 mmol m$^{-2}$). Figure~\ref{fig:indicatorPOD} shows only modelled POD$_1$ since measurements could not be calculated from the ozone monitoring data directly and could not be included.
 
 \begin{figure}[H]
   \centering
@@ -132,18 +135,8 @@ Figure~\ref{fig:indicators_emep} shows various modelled ozone metrics for 2018 w
 \label{fig:indicators_emep}
 \end{figure}
 
-The Figures ~\ref{fig:indicators_emep} and ~\ref{fig:indicators_airbase} show a) maxO3 (= mean of the daily max ozone concentration) for the 6-month period April-September, b) SOMO35 (= Sum of Ozone Means Over 35 ppb), c) AOT40 for forests (= Accumulated Ozone exposure over a Threshold of 40 ppb) for the 6-month period April-September using the hours between 08 and 20, and Figure~\ref{fig:indicatorPOD} shows POD$_1$ for forests (= Phytotoxic Ozone Dose above a threshold 1 mmol m$^{-2}$). 
 
-\begin{figure}[H]
-  \centering
-%  \subfigure[maxO3]{\includegraphics[clip=,angle=90,scale=0.60,viewport=187 62 415 750]{FIGS_STATUS/MAXO3_AprSep_ModObs_airbase_EMEP01.pdf}}
-%  \subfigure[SOMO35]{\includegraphics[clip=,angle=90,scale=0.60,viewport=187 62 415 750]{FIGS_STATUS/SOMO35_ModObs_airbase_EMEP01.pdf}}
-%  \subfigure[AOT40]{\includegraphics[clip=,angle=90,scale=0.60,viewport=187 62 415 750]{FIGS_STATUS/AOT40_ModObs_airbase_EMEP01_L20EC.pdf}}
-\caption{Model results and observations at EEA's e-Reporting stations (triangles) for mean of daily maximum ozone concentrations (a) ([$ppb$], Apr-Sep), SOMO35 (b) [$ppb.d$] and AOT40 for forests (c) [$ppb.h$] in 2018. Only data from measurement sites below 500 m a.s.l. are shown. Urban and traffic stations are not included.}
-\label{fig:indicators_airbase}
-\end{figure}
-
-These plots indicate good agreement between the modelled and measured ozone metrics in general, although there are indications of a slight underestimation by the model in some areas, most visible for the mean of daily maximum. The number of stations included in EEA's database (Figure~\ref{fig:indicators_airbase}) is, however, so large that it is difficult to see the underlying model fields in some areas.
+These plots indicate good agreement between these modelled and measured ozone metrics in general. The model and the measurements show an increasing gradient to the southeast as expected which reflects the strong dependency between surface ozone, temperature and solar radiation. 
 
 \begin{figure}[H]
   \centering{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_STATUS/POD1f_ModObs_emep_EMEP01.pdf}}
@@ -154,9 +147,9 @@ These plots indicate good agreement between the modelled and measured ozone metr
 It should be noted that the O$_3$ metrics such as AOT40 are very sensitive to the calculation of vertical O$_3$ gradients between the middle of the surface layer and the 3m height used for comparison with measurements \citep{Tuovinen:EP2007} and thus more difficult to compare with measurement data than, e.g., the mean daily maximum. Indeed, the formulation we use \citep{Simpson:EMEP2012} is probably better suited to a lowest model layer of 90m thickness (since we equate the centre of this, ca. 45m, with a `blending-height') than to a lowest model layer of 50m thickness (as used throughout this report). 
 The modelled POD$_1$ pattern differs from the other metrics reflecting the influence of additional parameters such as plant physiology, soil moisture etc., and is a metric more indicative of the direct impact of ozone on vegetation than, e.g., AOT40. The POD$_1$ field could, however, not be validated by the EMEP ozone measurement data alone. 
 
-SOMO35 is an indicator for health impacts recommended by WHO, and the results given in Figures~\ref{fig:indicators_emep} and \ref{fig:indicators_airbase} indicate that the health risk associated with surface ozone increased towards southern Europe. Highest levels are seen in the Mediterranean area and Northern Italy. SOMO35 is a health risk indicator without any specific threshold or limit value.
+SOMO35 is an indicator for health impacts recommended by WHO, and the results given in Figure~\ref{fig:indicators_emep} indicate that the health risk associated with surface ozone increased towards southern Europe. Highest levels are seen in the Mediterranean area and Northern Italy. SOMO35 is a health risk indicator without any specific threshold or limit value.
 
-AOT40 and POD$_1$ are indicators for effects on vegetation. UNECE's critical level for forests based on the 6-months AOT40 value is 5000 ppb hours, and the results shown in Figure~\ref{fig:indicators_emep} and Figure~\ref{fig:indicators_airbase} indicate that this level was exceeded in most of Europe in 2018. In parts of central Europe (Germany, Czechia, Switzerland, Austria, etc.) the critical level was exceeded by a very large margin (20000 ppb hours). As discussed in Chapter~\ref{ch:Summer2018} on the 2018 summer heat wave, AOT40 is probably a particularly poor indicator for effects on vegetation in 2018 due to the persistent drought over large areas. During dry periods, plants will reduce or close their stomata as a response to soil water deficit, which in turn will lead to reduced uptake of ozone. Parts of the reason for the elevated atmospheric concentrations of ozone (and the high AOT40 levels) could thus be explained by the reduced uptake in vegetation. 
+AOT40 and POD$_1$ are indicators for effects on vegetation. UNECE's critical level for forests based on the 6-months AOT40 value is 5000 ppb hours, and the results shown in Figure~\ref{fig:indicators_emep} indicate that this level was exceeded in most of Europe in 2019 although the model tends to overestimate the AOT40 values somewhat. In parts of central and south Europe the critical level was exceeded by a very large margin (20000 ppb hours and more). During dry periods, plants will reduce or close their stomata as a response to soil water deficit, which in turn will lead to reduced uptake of ozone.  Parts of the reason for the elevated atmospheric concentrations of ozone (and the high AOT40 levels) could thus be explained by the reduced uptake in vegetation.
 
 On the contrary, POD$_1$ takes into account this soil moisture deficit, giving an estimate of the actual flux of ozone into the plants. It is interesting to see the substantial difference in the geographical pattern of AOT40 and POD$_1$ in Figures~\ref{fig:indicators_emep} (c) and \ref{fig:indicatorPOD}. Whereas AOT40 shows a north-south gradient with peak values over southern/central parts of the continent, POD$_1$ is highest along the coast and shows a minimum in central parts of Europe just where high values of AOT40 are seen. This reflects the importance of the soil moisture effect for these two metrics for ozone damage to vegetation. For POD$_1$ the limit value depends on the species and Mills et al (2011) give a value of 4 mmol m$^{-2}$ for birch and beech and 8 mmol m$^{-2}$ for Norway spruce. The results in Figures~\ref{fig:indicators_emep} (c) and \ref{fig:indicatorPOD} indicate that both these limit values were exceeded in most of Europe. The modelled levels of POD$_1$ could, however, not be validated by observations. 
 
@@ -216,6 +209,7 @@ distributions of annual mean \PM[10] and \PM[2.5], with correlation
 coefficients of 0.65 and 0.7, respectively. Overall, the model
 underestimates the observed annual mean of \PM[10] by 17\% and
 \PM[2.5] by 16\%. \textcolor{blue}{CHECK with and Refer to AeroVal....A comprehensive model evaluation is provided in~\cite{WEB2020:PM}.}
+%From BIC rerun: biases -12 and -13\%, correlation 0.60 and 0.72 for \PM[10] and \PM[2.5]
 
 Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions that year. It was relatively warm across the EMEP area (Figure~\ref{fig:metyear-avMET}), in particular in the cold half-year (Figure~\ref{fig:temp-avMET}). Mild winter conditions would mean less need for residential heating, resulting in lower emissions from this sector. Moreover, stagnant air conditions (with temperature inversion, low wind speed and thin mixing layer), typically causing elevated pollution levels, are less frequent in warm winters. Also, the spring/summer period was relatively warm (except from Russia, Kazakhstan, Finland, most of Sweden, Spain and Portugal). During those months, the higher temperatures would enhance evaporation of semi-volatile inorganic and organic aerosols (SIA and SOA), though the more efficient oxidation contributes to secondary aerosol formation. Furthermore, the year 2019 was relatively dry over most of Europe (except in the south and parts of Scandinavia), in EECCA countries, and most of Russia (except from the northern regions), as shown in Figure~\ref{fig:metyear-avMET}. However, the amount of precipitation was also relatively large in the cold half-year in Denmark, France, the UK and parts of Germany (Figure~\ref{fig:prec-avMET}). As documented in ~\citep{CAMS2020}, the wet end of the year in western and southern Europe was the most prominent feature of precipitation in 2019, with 
 November being particularly extreme, both in terms of the total rainfall amounts and the number of days with heavy rainfall. As wet scavenging is the main PM removal mechanism, this, combined with the mild winter temperatures, resulted in the lower levels of PM pollution in winter 2019 over most of Europe.   
