--- a/chapterAPPX_ModelEval.tex
+++ b/chapterAPPX_ModelEval.tex
@@ -67,6 +67,7 @@ Tables~\ref{tab:tableSN} summarize common statistical measures of model score, s
 % /lustre/storeB/project/fou/kl/emep/ModelRuns/2020_REPORTING/VERIFICATION/STATISTICS/Res_EMEP01_rv4_35_2018_tnoCRef2_h500_outliers_comday (file date: Jun 22 16:50)
 
 % in 2021 (for reporting 2019), the numbers in this table were taken from:
+% /lustre/storeB/project/fou/kl/emep/ModelRuns/2021_REPORTING/VERIFICATION/STATISTICS/Res_EMEP01_rv4.42_2019_REF2_1_rnr_h500_outliers_comday
 
 \begin{center}
 \begin{tabular}{c|ccccccc}
@@ -75,12 +76,13 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 \hline
 %NO2_in_Air ugN/m3
 \chem{NO_2} (\ugN)
-%                   & 73 & 2.03 & 1.90 &  -7 & 0.73 & 0.87 & 0.93\\%d2015
-%                   & 63 & 1.76 & 1.48 & -16 & 0.75 & 0.84 & 0.90\\%d2016
-%                   & 65 & 1.88 & 1.29 & -32 & 1.32 & 0.69 & 0.78\\%d2017
+%                   & 73 & 2.03 & 1.90 &  -7 & 0.73 & 0.87 & 0.93\\%2015
+%                   & 63 & 1.76 & 1.48 & -16 & 0.75 & 0.84 & 0.90\\%2016
+%                   & 65 & 1.88 & 1.29 & -32 & 1.32 & 0.69 & 0.78\\%2017
 %                   & 72 & 2.24 & 1.41 & -37 & 1.69 & 0.72 & 0.76\\%2018
 %                   & 67 & 1.77 & 1.52 & -14 & 0.81 & 0.84 & 0.91\\%2019
-                    & 73 & 1.71 & 1.49 & -13 & 0.68 & 0.87 & 0.92\\%2020
+%                   & 73 & 1.71 & 1.49 & -13 & 0.68 & 0.87 & 0.92\\%2020
+                    & 73 & 1.56 & 1.44 &  -8 & 0.63 & 0.87 & 0.93\\%2021
 %SO2_in_Air ugS/m3
 \chem{SO_2} (\ugS)
 %                   & 71 & 0.42 & 0.37 & -11 & 0.36 & 0.53 & 0.70\\%2015
@@ -88,7 +90,8 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 54 & 0.34 & 0.38 &  10 & 0.36 & 0.47 & 0.65\\%2017
 %                   & 58 & 0.33 & 0.29 & -10 & 0.40 & 0.40 & 0.59\\%2018
 %                   & 59 & 0.41 & 0.33 & -19 & 0.66 & 0.57 & 0.63\\%2019
-                    & 57 & 0.30 & 0.26 & -13 & 0.21 & 0.63 & 0.78\\%2020
+%                   & 57 & 0.30 & 0.26 & -13 & 0.21 & 0.63 & 0.78\\%2020
+\\%2021
 %Sulphate_in_Air ugS/m3
 \chem{SO_4^{2-}}, sea salt corrected (\ugS) % OBS CHOOSE CORRECT UNIT!!!!
 %                   & 23 & 0.40 & 0.30 & -27 & 0.13 & 0.95 & 0.90\\%2015
@@ -96,7 +99,8 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 26 & 0.37 & 0.26 & -29 & 0.19 & 0.86 & 0.83\\%2017
 %                   & 27 & 0.32 & 0.20 & -37 & 0.18 & 0.84 & 0.74\\%2018
 %                   & 29 & 0.36 & 0.21 & -40 & 0.23 & 0.76 & 0.74\\%2019
-                    & 24 & 0.38 & 0.21 & -44 & 0.24 & 0.87 & 0.69\\%2020
+%                   & 24 & 0.38 & 0.21 & -44 & 0.24 & 0.87 & 0.69\\%2020
+\\%2021
 %Sulphate_in_Air ugS/m3
 \chem{SO_4^{2-}}, including sea salt (\ugS) % OBS CHOOSE CORRECT UNIT!!!!
 %                   & 40 & 0.53 & 0.42 & -22 & 0.16 & 0.89 & 0.88\\%2015
@@ -104,7 +108,7 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 33 & 0.44 & 0.37 & -16 & 0.16 & 0.83 & 0.86\\%2017
 %                   & 33 & 0.41 & 0.29 & -30 & 0.19 & 0.81 & 0.75\\%2018
 %                   & 34 & 0.46 & 0.29 & -36 & 0.25 & 0.77 & 0.72\\%2019
-                    & 32 & 0.48 & 0.29 & -39 & 0.24 & 0.87 & 0.71\\%2020
+%                    & 32 & 0.48 & 0.29 & -39 & 0.24 & 0.87 & 0.71\\%2020
 %NO3-_in_Air ugN/m3
 \chem{NO_3^-} (\ugN) % OBS CHOOSE CORRECT UNIT!!!!
 %                   & 21 & 0.39 & 0.34 & -13 & 0.20 & 0.88 & 0.88\\%2015
@@ -112,7 +116,7 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 20 & 0.28 & 0.35 &  26 & 0.19 & 0.79 & 0.81\\%2017
 %                   & 25 & 0.26 & 0.27 &   2 & 0.11 & 0.81 & 0.89\\%2018
 %                   & 26 & 0.26 & 0.27 &   7 & 0.12 & 0.81 & 0.89\\%2019
-                    & 25 & 0.27 & 0.31 &  15 & 0.12 & 0.78 & 0.87\\%2020
+%                    & 25 & 0.27 & 0.31 &  15 & 0.12 & 0.78 & 0.87\\%2020
 %HNO3_in_Air ugN/m3
 \chem{HNO_3} (\ugN)
 %                   & 11 & 0.19 & 0.10 & -45 & 0.20 & 0.42 & 0.52\\%2015
@@ -120,7 +124,7 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 14 & 0.26 & 0.11 & -60 & 0.52 & 0.09 & 0.26\\%2017
 %                   & 17 & 0.12 & 0.09 & -20 & 0.07 & 0.62 & 0.70\\%2018
 %                   & 18 & 0.12 & 0.09 & -27 & 0.08 & 0.64 & 0.68\\%2019
-                    & 17 & 0.12 & 0.10 & -17 & 0.08 & 0.54 & 0.68\\%2020
+%                    & 17 & 0.12 & 0.10 & -17 & 0.08 & 0.54 & 0.68\\%2020
 %Sum_of_HNO3,_NO3-_in_air ugN/m3
 \chem{NO_3^-}+\chem{HNO_3} (\ugN)
 %                   & 42 & 0.51 & 0.45 & -12 & 0.16 & 0.83 & 0.89\\%2015
@@ -128,7 +132,7 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 38 & 0.47 & 0.56 &  18 & 0.15 & 0.90 & 0.91\\%2017
 %                   & 36 & 0.42 & 0.41 &  -4 & 0.09 & 0.92 & 0.96\\%2018
 %                   & 37 & 0.42 & 0.41 &  -2 & 0.09 & 0.91 & 0.95\\%2019
-                    & 34 & 0.42 & 0.43 &   1 & 0.08 & 0.94 & 0.97\\%2020
+%                    & 34 & 0.42 & 0.43 &   1 & 0.08 & 0.94 & 0.97\\%2020
 %Ammonia_in_Air ugN/m3
 \chem{NH_3} (\ugN)
 %                   & 14 & 0.70 & 0.77 &  11 & 0.44 & 0.69 & 0.81\\%2015
@@ -136,7 +140,7 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 16 & 0.58 & 0.72 &  25 & 0.38 & 0.90 & 0.90\\%2017
 %                   & 20 & 0.46 & 0.67 &  47 & 0.40 & 0.92 & 0.87\\%2018
 %                   & 22 & 0.53 & 0.64 &  22 & 0.37 & 0.84 & 0.89\\%2019
-                    & 20 & 0.64 & 0.68 &   7 & 0.28 & 0.91 & 0.95\\%2020
+%                    & 20 & 0.64 & 0.68 &   7 & 0.28 & 0.91 & 0.95\\%2020
 %NH4+_in_Air ugN/m3
 \chem{NH_4^+} (\ugN)
 %                   & 22 & 0.74 & 0.60 & -19 & 0.29 & 0.78 & 0.84\\%2015
@@ -144,7 +148,7 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 19 & 0.56 & 0.50 & -10 & 0.26 & 0.70 & 0.83\\%2017
 %                   & 26 & 0.47 & 0.38 & -18 & 0.23 & 0.65 & 0.79\\%2018
 %                   & 26 & 0.45 & 0.37 & -17 & 0.25 & 0.67 & 0.81\\%2019
-                    & 26 & 0.50 & 0.42 & -16 & 0.20 & 0.78 & 0.86\\%2020
+%                    & 26 & 0.50 & 0.42 & -16 & 0.20 & 0.78 & 0.86\\%2020
 %NH3+NH4+_in_Air ugN/m3
 \chem{NH_3}+\chem{NH_4^+} (\ugN)
 %                   & 36 & 1.32 & 1.39 &   5 & 0.58 & 0.81 & 0.88\\%2015
@@ -152,7 +156,7 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 32 & 1.27 & 1.53 &  21 & 1.07 & 0.74 & 0.79\\%2017
 %                   & 31 & 1.16 & 1.35 &  16 & 0.95 & 0.76 & 0.79\\%2018
 %                   & 33 & 1.13 & 1.68 &  50 & 2.41 & 0.48 & 0.41\\%2019
-                    & 31 & 1.28 & 1.59 &  24 & 1.47 & 0.70 & 0.69\\%2020
+%                    & 31 & 1.28 & 1.59 &  24 & 1.47 & 0.70 & 0.69\\%2020
 %SO4_wet_dep. mgS/m2 (unit error removed in 2018)
 \chem{SO_4^{2-}} wd (\mgSm)
 %                   & 47 &  9353 & 8827 & -6  &  94 & 0.69 & 0.82\\%2015
@@ -160,7 +164,7 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 51 &  8994 & 8026 & -11 & 123 & 0.67 & 0.76\\%2017
 %                   & 49 &  8018 & 6557 & -18 &  78 & 0.70 & 0.82\\%2018
 %                   & 52 &  9116 & 6657 & -27 &  99 & 0.64 & 0.75\\%2019
-                    & 43 &  9587 & 6149 & -36 & 253 & 0.76 & 0.61\\%2020
+%                    & 43 &  9587 & 6149 & -36 & 253 & 0.76 & 0.61\\%2020
 %SO4_conc._in_precip. mgS/l (unit error removed in 2018)
 \chem{SO_4^{2-}} cp (\mgSl)
 %                   & 47 & 0.28 & 0.25 & -11 & 0.13 & 0.72 & 0.83\\%2015
@@ -168,7 +172,7 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 51 & 0.26 & 0.20 & -23 & 0.15 & 0.75 & 0.80\\%2017
 %                   & 49 & 0.21 & 0.17 & -20 & 0.08 & 0.84 & 0.89\\%2018
 %                   & 52 & 0.25 & 0.16 & -35 & 0.17 & 0.66 & 0.68\\%2019
-                    & 43 & 0.30 & 0.19 & -38 & 0.27 & 0.60 & 0.55\\%2020
+%                    & 43 & 0.30 & 0.19 & -38 & 0.27 & 0.60 & 0.55\\%2020
 %Ammonium_wet_dep. mgN/m2 (unit error removed in 2018)
 \chem{NH_4^+} wd (\mgNm)
 %                   & 47 & 12185 & 13641 & 12 & 129 & 0.82 & 0.89\\%2015
@@ -176,7 +180,7 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 51 & 13858 & 13586 & -2 & 196 & 0.46 & 0.68\\%2017
 %                   & 48 & 12471 & 13911 & 12 & 118 & 0.82 & 0.89\\%2018
 %                   & 51 & 12646 & 14732 & 17 & 161 & 0.70 & 0.81\\%2019
-                    & 42 & 11065 & 11625 &  5 & 185 & 0.62 & 0.78\\%2020
+%                    & 42 & 11065 & 11625 &  5 & 185 & 0.62 & 0.78\\%2020
 %Ammonium_conc._in_precip. mgN/l (unit error removed in 2018)
 \chem{NH_4^+} cp (\mgNl)
 %                   & 47 & 0.35 & 0.37 &  5 & 0.17 & 0.58 & 0.75\\%2015
@@ -184,7 +188,7 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 51 & 0.40 & 0.37 & -7 & 0.21 & 0.50 & 0.71\\%2017
 %                   & 48 & 0.33 & 0.36 &  9 & 0.13 & 0.82 & 0.88\\%2018
 %                   & 51 & 0.35 & 0.38 & 11 & 0.21 & 0.57 & 0.73\\%2019
-                    & 42 & 0.38 & 0.38 &  0 & 0.20 & 0.62 & 0.78\\%2020
+%                    & 42 & 0.38 & 0.38 &  0 & 0.20 & 0.62 & 0.78\\%2020
 %Nitrate_wet_dep. mgN/m2 (unit error removed in 2018)
 \chem{NO_3^-} wd (\mgNm)
 %                   & 47 & 10549 & 10390 & -2 & 125 & 0.69 & 0.81\\%2015
@@ -192,7 +196,7 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 52 & 10312 &  9995 & -3 & 122 & 0.65 & 0.81\\%2017
 %                   & 49 &  9783 &  9623 & -2 &  89 & 0.79 & 0.88\\%2018
 %                   & 53 & 10394 & 10307 & -1 &  87 & 0.79 & 0.89\\%2019
-                    & 43 &  9003 &  8348 & -7 & 156 & 0.58 & 0.73\\%2020
+%                    & 43 &  9003 &  8348 & -7 & 156 & 0.58 & 0.73\\%2020
 %Nitrate_conc._in_precip. mgN/l (unit error removed in 2018)
 \chem{NO_3^-} cp (\mgNl)
 %                   & 47 & 0.29 & 0.28 &  -6 & 0.12 & 0.59 & 0.77\\%2015
@@ -200,7 +204,7 @@ Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
 %                   & 52 & 0.28 & 0.26 &  -8 & 0.11 & 0.72 & 0.83\\%2017
 %                   & 49 & 0.25 & 0.24 &  -4 & 0.09 & 0.81 & 0.88\\%2018
 %                   & 53 & 0.26 & 0.24 &  -9 & 0.10 & 0.79 & 0.87\\%2019
-                    & 43 & 0.30 & 0.27 & -12 & 0.24 & 0.46 & 0.58\\%2020
+%                    & 43 & 0.30 & 0.27 & -12 & 0.24 & 0.46 & 0.58\\%2020
 %Precipitation mm
 Precipitation (mm)
 %                   & 47 & 39526 & 40471 &  2 & 236 & 0.81 & 0.88\\%2015
@@ -208,7 +212,7 @@ Precipitation (mm)
 %                   & 53 & 42324 & 46557 & 10 & 223 & 0.89 & 0.93\\%2017
 %                   & 50 & 44463 & 47427 &  7 & 269 & 0.77 & 0.87\\%2018
 %                   & 53 & 45168 & 48669 &  8 & 271 & 0.78 & 0.87\\%2019
-                    & 43 & 33815 & 37004 &  9 & 259 & 0.84 & 0.90\\%2020
+%                    & 43 & 33815 & 37004 &  9 & 259 & 0.84 & 0.90\\%2020
 \hline\hline
 
 Ozone daily max (ppb) 
@@ -217,14 +221,14 @@ Ozone daily max (ppb)
 % & 111 & 41.36 & 42.81 &  4 & 3.57 & 0.76 & 0.83\\%2017
 % & 118 & 39.72 & 42.63 &  7 & 4.65 & 0.70 & 0.74\\%2018
 % & 115 & 40.37 & 40.90 &  1 & 3.10 & 0.80 & 0.86\\%2019
-  & 117 & 42.60 & 41.46 & -3 & 3.03 & 0.82 & 0.84\\%2020
+%  & 117 & 42.60 & 41.46 & -3 & 3.03 & 0.82 & 0.84\\%2020
 Ozone daily mean (ppb) 
 % & 111 & 31.84 & 34.40 &  8 & 4.57 & 0.71 & 0.75\\%2015
 % & 112 & 30.42 & 33.05 &  9 & 4.80 & 0.69 & 0.71\\%2016
 % & 111 & 32.10 & 35.14 &  9 & 5.21 & 0.68 & 0.71\\%2017
 % & 118 & 30.55 & 35.10 & 15 & 6.44 & 0.64 & 0.66\\%2018
 % & 116 & 31.40 & 34.01 &  8 & 4.91 & 0.70 & 0.73\\%2019
-  & 117 & 33.00 & 34.36 &  4 & 4.14 & 0.72 & 0.76\\%2020
+%  & 117 & 33.00 & 34.36 &  4 & 4.14 & 0.72 & 0.76\\%2020
 \hline\hline
 %PM10 ug/m3
 \PM[10] (\ug)
@@ -235,7 +239,7 @@ Ozone daily mean (ppb)
 %  &  30 &  12.76 &   9.91 & -22 & 4.08 & 0.72 & 0.76\\%2018
 %  &  44 &  12.41 &   9.71 & -22 & 3.86 & 0.78 & 0.80\\%2018b
 %  &  30 &  12.73 &   9.90 & -22 & 3.86 & 0.76 & 0.77\\%2019
-   &  31 &  14.09 &  11.01 & -22 & 4.34 & 0.66 & 0.70\\%2020
+%   &  31 &  14.09 &  11.01 & -22 & 4.34 & 0.66 & 0.70\\%2020
 %PM25 ug/m3
 \PM[2.5] (\ug)
 %  &  35 &   9.48 &   7.64 & -19 & 2.90 & 0.84 & 0.84\\%2015
@@ -244,21 +248,21 @@ Ozone daily mean (ppb)
 %  &  24 &   7.84 &   6.64 & -15 & 2.63 & 0.79 & 0.86\\%2018
 %  &  34 &   8.04 &   7.25 & -10 & 2.74 & 0.71 & 0.82\\%2018b
 %  &  25 &   7.45 &   6.00 & -19 & 2.42 & 0.81 & 0.84\\%2019
-   &  26 &   8.28 &   7.09 & -14 & 2.42 & 0.81 & 0.87\\%2020
+%   &  26 &   8.28 &   7.09 & -14 & 2.42 & 0.81 & 0.87\\%2020
 \chem{SO_4^{2-}}, including sea salt (\ug)%Sulfate_in_Air, including sea salt, ug/m3 (also included in SN chapter, but there as ug(S)/m3)
 %  & 37  &  1.59  &   1.28   &  -19 & 0.54 & 0.80 & 0.85\\%2015
 %  & 28  &  1.74  &   1.27   &  -27 & 0.69 & 0.80 & 0.76\\%2016
 %  & 33  &  1.32  &   1.10   &  -16 & 0.49 & 0.83 & 0.87\\%2017
 %  & 33  &  1.23  &   0.86   &  -30 & 0.58 & 0.81 & 0.75\\%2018
 %  & 34  &  1.37  &   0.87   &  -36 & 0.76 & 0.77 & 0.72\\%2019
-   & 33  &  1.41  &   0.86   &  -39 & 0.72 & 0.88 & 0.72\\%2020
+%   & 33  &  1.41  &   0.86   &  -39 & 0.72 & 0.88 & 0.72\\%2020
 \chem{SO_4^{2-}}, sea salt corrected (\ug)%Sulfate_in_Air, sea salt corrected, ug/m3 (also included in SN chapter, but there as ug(S)/m3)
 %  & 23  &  1.21  &  0.89   &  -27 &  0.39 & 0.95 & 0.90\\%2015
 %  & 20  &  1.56  &  1.02   &  -34 &  0.79 & 0.83 & 0.74\\%2016
 %  & 26  &  1.10  &  0.78   &  -29 &  0.56 & 0.86 & 0.83\\%2017
 %  & 27  &  0.95  &  0.60   &  -37 &  0.54 & 0.84 & 0.74\\%2018
 %  & 29  &  1.08  &  0.65   &  -40 &  0.69 & 0.75 & 0.73\\%2019
-   & 25  &  1.12  &  0.64   &  -42 &  0.70 & 0.85 & 0.69\\%2020
+%   & 25  &  1.12  &  0.64   &  -42 &  0.70 & 0.85 & 0.69\\%2020
 %SO4_in_PM10 ug/m3
 \chem{SO_4^{2-}} in \PM[10] (\ug)
 %  & 14  &  1.62  &   1.29  &   -21 & 0.43 &  0.85 & 0.82\\%2014
@@ -267,7 +271,7 @@ Ozone daily mean (ppb)
 %  & 14  &  1.76  &   1.26  &   -28 & 0.58 &  0.92 & 0.86\\%2017
 %  & 12  &  1.47  &   1.01  &   -31 & 0.57 &  0.91 & 0.85\\%2018
 %  & 13  &  1.61  &   1.09  &   -32 & 0.58 &  0.94 & 0.87\\%2019
-   & 13  &  1.62  &   1.01  &   -37 & 0.70 &  0.91 & 0.85\\%2020
+%   & 13  &  1.62  &   1.01  &   -37 & 0.70 &  0.91 & 0.85\\%2020
 %SO4_in_PM2.5 ug/m3
 %\chem{SO_4^{2-}} in \PM[2.5] (\ug)
 %& 16   &   2.14   &  1.58  &   -26 & 1.64 &  0.65 & 0.62\\%2014
@@ -286,7 +290,7 @@ Ozone daily mean (ppb)
 %  & 20  &  1.23  &  1.55 &   26 & 0.84 & 0.79 & 0.81\\%2017
 %  & 25  &  1.15  &  1.18 &    2 & 0.49 & 0.81 & 0.89\\%2018
 %  & 26  &  1.15  &  1.23 &    7 & 0.55 & 0.80 & 0.89\\%2019
-   & 25  &  1.17  &  1.35 &   15 & 0.55 & 0.80 & 0.88\\%2020
+%   & 25  &  1.17  &  1.35 &   15 & 0.55 & 0.80 & 0.88\\%2020
 %NO3_in_PM10 ug/m3
 \chem{NO_3^-} in \PM[10] (\ug)
 %  & 14  &  1.40  &  1.58  &   12 & 0.74 & 0.60 & 0.73\\%2014
@@ -295,7 +299,7 @@ Ozone daily mean (ppb)
 %  & 14  &  1.35  &  1.91  &   42 & 0.72 & 0.83 & 0.80\\%2017
 %  & 12  &  1.02  &  1.33  &   30 & 0.56 & 0.47 & 0.63\\%2018
 %  & 13  &  1.11  &  1.45  &   31 & 0.61 & 0.44 & 0.64\\%2019
-   & 13  &  1.01  &  1.23  &   22 & 0.55 & 0.29 & 0.59\\%2020
+%   & 13  &  1.01  &  1.23  &   22 & 0.55 & 0.29 & 0.59\\%2020
 %NO3_in_PM25 ug/m3
 \chem{NO_3^-} in \PM[2.5] (\ug) $\star$
 %  &  9  &   3.36  &   2.18 &   -35 & 4.06 & 0.90 & 0.52\\%2014
@@ -306,7 +310,7 @@ Ozone daily mean (ppb)
 %  &  1  &   3.50  &   3.98 &    14 & 0.48 & 0.00 & 0.00\\%2019
 %  & 12  &   1.27  &   2.16 &    70 & 0.98 & 0.88 & 0.76\\%2019b
 %st   &  2  &   1.31  &   1.81 &    39 & 0.57 & 1.00 & 0.93\\%2020
-   &  7  &   1.87  &   2.06 &    11 & 0.546 & 0.91 & 0.93\\%2020
+%   &  7  &   1.87  &   2.06 &    11 & 0.546 & 0.91 & 0.93\\%2020
 %NH4+_in_Air ug/m3
 \chem{NH_4^+} (\ug) % OBS CHOOSE CORRECT UNIT!!!!
 %  & 22  &   0.99  &   0.73  &  -26 & 0.39 & 0.92 & 0.88\\%2014
@@ -315,7 +319,7 @@ Ozone daily mean (ppb)
 %  & 19  &   0.65  &   0.63  &   -3 & 0.22 & 0.88 & 0.93\\%2017
 %  & 26  &   0.60  &   0.50  &  -18 & 0.30 & 0.65 & 0.79\\%2018
 %  & 26  &   0.53  &   0.47  &  -10 & 0.21 & 0.84 & 0.91\\%2019
-   & 26  &   0.65  &   0.55 &   -16 & 0.25 & 0.78 & 0.86\\%2020
+%   & 26  &   0.65  &   0.55 &   -16 & 0.25 & 0.78 & 0.86\\%2020
 %NH4_in_PM10 ug/m3
 %\chem{NH_4^+} in \PM[10] (\ug) 
 % & 7   &   0.78  &   0.60  & -23 & 0.38&  0.64&  0.77\\%2015
@@ -324,7 +328,7 @@ Ozone daily mean (ppb)
 % \\%2020 (too few stations)
 %NH4_in_PM10 ug/m3
 \chem{NH_4^+} in \PM[10] (\ug) $\star$
-&  3  &   1.37  &   1.45  &   6 & 0.22&  0.79&  0.49\\%2020
+% &  3  &   1.37  &   1.45  &   6 & 0.22&  0.79&  0.49\\%2020
 %NH4_in_PM2.5 ug/m3
 \chem{NH_4^+} in \PM[2.5] (\ug) $\star$
 % & 16  &   0.83  &   0.97  &  16 & 0.39&  0.80&  0.84\\%2014
@@ -332,10 +336,10 @@ Ozone daily mean (ppb)
 % &  2  &   1.39  &   1.95  &  40 & 0.65& -1.00&  0.38\\%2016
 % &  2  &   1.39  &   1.98  &  43 & 0.67&  1.00&  0.31\\%2017 
 % \\%2020 (too few stations with 75% coverage)
-&  7  &   1.12  &   0.90  & -20 & 0.27&  0.59&  0.60\\%2020
+% &  7  &   1.12  &   0.90  & -20 & 0.27&  0.59&  0.60\\%2020
 %EC_in_PM10 ugC/m3
 EC in \PM[10] (\ugC) $\star$
-  & 3  &   0.36  &   0.39  &   8 & 0.09 & 0.48 & 0.66\\%2020
+%  & 3  &   0.36  &   0.39  &   8 & 0.09 & 0.48 & 0.66\\%2020
 %EC_in_PM2.5 ugC/m3
 EC in \PM[2.5] (\ugC) $\star$
 %  & 16  &   0.38  &   0.34  &  -9 & 0.25 & 0.67 & 0.75\\%2014
@@ -347,10 +351,10 @@ EC in \PM[2.5] (\ugC) $\star$
 %  &  5  &   0.45  &   0.52  &  14 & 0.26 & 0.98 & 0.92\\%2018c (common days = 180)
 %  &  1  &   0.37  &   0.26  & -30 & 0.11 & 0.00 & 0.00\\%2019
 %  &  8  &   0.26  &   0.24  &  -7 & 0.09 & 0.29 & 0.52\\%2019b
-   & 12  &   0.35  &   0.44  &  24 & 0.17 & 0.89 & 0.84\\%2020
+%   & 12  &   0.35  &   0.44  &  24 & 0.17 & 0.89 & 0.84\\%2020
 %OC_in_PM10 ugC/m3
 OC in \PM[10] (\ugC) $\star$
-  & 3  &   3.20  &   1.67  & -48 & 1.84 &-0.60 & 0.45\\%2020
+%  & 3  &   3.20  &   1.67  & -48 & 1.84 &-0.60 & 0.45\\%2020
 %OC_in_PM2.5 ugC/m3
 OC in \PM[2.5] (\ugC) $\star$
 %  & 16  &   2.49  &   1.07  & -57 & 1.73 & 0.70 & 0.49\\%2014
@@ -362,7 +366,7 @@ OC in \PM[2.5] (\ugC) $\star$
 %  &  6  &   2.60  &   1.34  & -48 & 1.46 & 0.81 & 0.71\\%2018c (common days = 180)
 %  &  1  &   2.90  &   0.70  & -76 & 2.20 & 0.00 & 0.00\\%2019
 %  &  8  &   1.86  &   0.72  & -61 & 1.35 &-0.52 & 0.36\\%2019b
-   & 12  &   2.77  &   1.91  & -31 & 1.53 & 0.26 & 0.53\\%2020
+%   & 12  &   2.77  &   1.91  & -31 & 1.53 & 0.26 & 0.53\\%2020
 %Na+_in_air ug/m3
 Na+ (\ug)
 %  & 26  &   0.78  &   0.89  &  14 &  0.53 & 0.78 & 0.87\\%2014
@@ -371,7 +375,7 @@ Na+ (\ug)
 %  & 21  &   0.90  &   1.06  &  18 &  0.33 & 0.97 & 0.97\\%2017
 %  & 24  &   0.74  &   0.74  &  -1 &  0.29 & 0.93 & 0.96\\%2018
 %  & 24  &   0.86  &   0.78  &  -9 &  0.43 & 0.89 & 0.94\\%2019
-   & 23  &   0.86  &   0.72  & -16 &  0.64 & 0.85 & 0.87\\%2020
+%   & 23  &   0.86  &   0.72  & -16 &  0.64 & 0.85 & 0.87\\%2020
 %Na_in_PM10 ug/m3
 Na+ in \PM[10] (\ug)
 %  &  7  &   0.48  &   0.22 &  -53 &  0.47 & 0.93 & 0.49\\%2015
@@ -379,7 +383,7 @@ Na+ in \PM[10] (\ug)
 %  &  7  &   0.45  &   0.29 &  -36 &  0.41 & 0.84 & 0.64\\%2017
 %  &  6  &   0.43  &   0.26 &  -40 &  0.40 & 0.75 & 0.58\\%2018
 %  &  6  &   0.46  &   0.27 &  -41 &  0.39 & 0.84 & 0.64\\%2019
-   &  6  &   0.42  &   0.25 &  -41 &  0.38 & 0.80 & 0.62\\%2020
+%   &  6  &   0.42  &   0.25 &  -41 &  0.38 & 0.80 & 0.62\\%2020
 %Na_in_PM2.5 ug/m3
 Na+ in \PM[2.5] (\ug) $\star$
 %  & 14  &   0.15  &   0.15 &    0 &  0.04 & 0.92 & 0.96\\%2014
@@ -390,7 +394,7 @@ Na+ in \PM[2.5] (\ug) $\star$
 %  &  1  &   0.07  &   0.02 &  -77 &  0.05 & 0.00 & 0.00\\%2019
 %  & 12  &   0.10  &   0.12 &   23 &  0.08 & 0.55 & 0.68\\%2019b
 %  &  2  &   0.07  &   0.01 &  -81 &  0.06 &-1.00 & 0.42\\%2020 (too few stations with 75% coverage)
-  &  8  &   0.11  &   0.15 &   41 &  0.12 & 0.80 & 0.70\\%2020 (too few stations)
+%  &  8  &   0.11  &   0.15 &   41 &  0.12 & 0.80 & 0.70\\%2020 (too few stations)
 \hline\hline
 
 \end{tabular}
