--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -375,7 +375,8 @@ A number of smaller changes have been made:
   \item[Timezones] A global map of time-zones was produced to enable more accurate calculations for global-scale modelling. The new system also estimates summer and winter times where appropriate. (The previous system used simple longitude methods to estimate local tinme, and had no accounting for summer/winter time.) 
   \item[Shipping emissions] Shipping emissions now spread as 20\% below 20m, 80\% between 20-90m; 
   \item[RH-2m]
-          NWP model rh2m now used in place of earlier sub-grid calculation; % 9/2
+          NWP model rh2m now used in place of earlier sub-grid calculation. This simplification was made since temperature and heat flux data also had no sub-grid calculation. % 9/2
+  \item[RH limits] RH limits (giving maximum values) were added to the Gerber-calculations of aerosol size: 99\% for rural aerosol, and 99.99\% for sea-salt, following \citet{Gerber1985}. 
 \end{description}
 
 
@@ -385,8 +386,7 @@ A number of smaller changes have been made:
 \begin{table}
 \begin{footnotesize}
 \caption{Summary of major EMEP MSC-W model versions from 2012--2020.
-Extends Table S1 of \citealt{Simpson:EMEP2012}
-  COMMENT: Note - recent changes and tags are a little confused. Dave will fix.
+Extends Table S1 of \citealt{Simpson:EMEP2012},
 }
 \label{tab:Updates}
 \centering
@@ -397,13 +397,11 @@ Version & Update                                        & Ref$^{(a)}$   \\
 v4.42  &  19-sector emissions system (GNFR-CAMS) introduced; %  - see Sect.~\ref{ssec:gnfr};  % c21/4
 Emissions for soil NO, DMS, and aircraft updated using results from
  CAMS81 project; % 16/5
- Modified various parameters concerning fine/coarse fractions for sea-salt and nitrate; 
+ Modified various parameters concerning fine/coarse fractions for sea-salt and nitrate; Added RH limits on Gerber functions;
  `rnr' emission split and EmChem19r introduced;
            Revised global monthly emission factors produced (and use of global time.zone map);  % 16/5
            Changed default Kz  and Hmix schemes (Sect.~\ref{sec:updateKz}); 
          upgraded local fraction methods; cleaned up various config options. 
-
-
         & This report \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % The changes were spread over several versions. Too hard to identify 
@@ -430,6 +428,7 @@ Emissions for soil NO, DMS, and aircraft updated using results from
 %          NWP model rh2m now used in place of earlier sub-grid calculation; % 9/2
 %          Upgrade of local fractions methodology;  % 7/11/2020
 %        & \\
+rv4.36 & Public domain (Nov. 2020); Updated \ce{NO3} photolysis; Allow physical height and topography settings in sites/sondes output; better time resolution on Hmix outputs; allow hourly time-factors per country and species; Various emission coding improvements\\
 % 23/10/2021:
 rv4.35  & Various updates, including heavy   
           refactoring of local-fraction code, bug-fixes in MARS module,
@@ -448,13 +447,14 @@ rv4.17  & Public domain (Feb. 2018);
           to snow cover & R2018 \\
 rv4.16  & New radiation scheme (Weiss\&Norman); Added dry and wet deposition for \ce{N2O5};
          (Used for  \citealt{Stadtler2018,MillsGCB2018b}) & R2018   \\
-rv4.15  & EmChem16 scheme & R2017 \\
+rv4.15  & EmChem16 scheme; % & R2017; % \\
 %    Sect.\ref{sec:GNFR}--\ref{ss:Splits} & R2016  \\
 %
-rv4.14  & Updated chemical scheme & R2017       \\
+%rv4.14  & Updated chemical scheme & R2017       \\
 %% rv4.13 + CRI was used in McFiggans. Difficult to describe combo
 %        & \\
-rv4.12  & New  global land-cover and BVOC & R2017       \\
+%rv4.12  & 
+New  global land-cover and BVOC & R2017       \\
 %        & \\
 rv4.10  &  Public domain (Oct. 2016)                 
          (Used for  \citealt{MillsGCB2018a}) &  R2016 \\
